Added new fonts and quick links

--- a/newTab.html
+++ b/newTab.html
@@ -23,6 +23,9 @@
     <li><a href="https://facebook.com"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
     <li><a href="https://linkedin.com"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
     <li><a href="https://instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+    <li><a href="https://youtube.com"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+    <li><a href="https://web.whatsapp.com"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
+    <li><a href="https://drive.google.com"><i class="fab fa-google-drive	" aria-hidden="true"></i></a></li>
   </ul>
   <script src="jquery.min.js"></script>
   <script src="clock.js"></script>
