--- a/newTab.html
+++ b/newTab.html
@@ -21,7 +21,7 @@
     <li><a href="https://google.com"><i class="fab fa-google" aria-hidden="true"></i></a></li>
     <li><a href="https://twitter.com"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
     <li><a href="https://facebook.com"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-    <li><a href="https://linkedin.com"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+    <li><a href="https://linkedin.com"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li> <!--USED TO FETCH FROM LINKEDIN-->
     <li><a href="https://instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
     <li><a href="https://youtube.com"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
     <li><a href="https://web.whatsapp.com"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
